update tmux configuration file

--- a/mac-os/.tmux.conf
+++ b/mac-os/.tmux.conf
@@ -1,3 +1,5 @@
+# enable mouse support
 setw -g mouse on
 
+# enable clipboard support with mouse
 bind-key -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
